test/parsing/ferguson/reserved-string.chpl
var string = 0;

proc f(string) {
}

class string {
  var string =0;
}

type string = int;

proc string() {
}

proc test() {
  try {
  } catch string {
  }
}
